[gd_scene load_steps=22 format=4 uid="uid://xhokn4oylcw2"]

[ext_resource type="Script" uid="uid://cxaweorifhoet" path="res://scripts/MainLand.gd" id="1_phvbg"]
[ext_resource type="Texture2D" uid="uid://cuu4ofx47hhvq" path="res://assets/ground/spring_.png" id="3_lcd1r"]
[ext_resource type="Texture2D" uid="uid://bd76vyd8kgk1a" path="res://assets/characters/dino-blue.png" id="6_s6eg2"]
[ext_resource type="Script" uid="uid://dnur25np7t7t6" path="res://scripts/BoatSeller.gd" id="7_7n2o6"]
[ext_resource type="PackedScene" uid="uid://b35xp2ttecyr7" path="res://scenes/ui_scenes/instruction_object.tscn" id="9_qrwm6"]
[ext_resource type="FontFile" uid="uid://dwxqiucqib8po" path="res://assets/fonts/PixelOperator8.ttf" id="10_0vypl"]
[ext_resource type="PackedScene" uid="uid://bilvcqsbloc1l" path="res://scenes/ui_scenes/dialog_select_menu.tscn" id="11_fm13a"]
[ext_resource type="PackedScene" uid="uid://c3v7wk6dh3e11" path="res://scenes/player.tscn" id="12_tmir4"]
[ext_resource type="PackedScene" uid="uid://qcgqbm6alv3k" path="res://scenes/ui_scenes/health_ui.tscn" id="13_bb8k7"]
[ext_resource type="PackedScene" uid="uid://b86s8drdhidb5" path="res://scenes/objects_scenes/boat.tscn" id="14_trb2f"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_4oyfp"]
load_path = "res://.godot/imported/Fishing_hut.png-fb0661bb9b520c9ad0fc9a066a812fdd.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lcd1r"]
load_path = "res://.godot/imported/Water.png-d6f2b8768c656c031d5dd721ecae5c91.ctex"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_s6eg2"]
texture = SubResource("CompressedTexture2D_lcd1r")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
1:3/0 = 0
3:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
2:5/0 = 0
4:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_glsmu"]
texture = ExtResource("3_lcd1r")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
10:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
10:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:7/0 = 0
10:7/0 = 0
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:8/0 = 0
5:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
10:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:9/0 = 0
5:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
10:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0

[sub_resource type="TileSet" id="TileSet_phvbg"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_s6eg2")
sources/1 = SubResource("TileSetAtlasSource_glsmu")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_vo17d"]
distance = 2.625

[sub_resource type="AtlasTexture" id="AtlasTexture_glsmu"]
atlas = ExtResource("6_s6eg2")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_6h7vh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_glsmu")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rccsu"]
size = Vector2(60, 30)

[sub_resource type="Gradient" id="Gradient_1phco"]
colors = PackedColorArray(0.176471, 0.176471, 0.176471, 1, 0.176471, 0.176471, 0.176471, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_edf0l"]
gradient = SubResource("Gradient_1phco")
width = 128

[node name="Game" type="Node2D"]
script = ExtResource("1_phvbg")

[node name="FishingHut" type="Sprite2D" parent="."]
position = Vector2(1165.5, 55)
scale = Vector2(2, 2)
texture = SubResource("CompressedTexture2D_4oyfp")

[node name="StaticBody2D" type="StaticBody2D" parent="FishingHut"]
scale = Vector2(2, 2)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="FishingHut/StaticBody2D"]
polygon = PackedVector2Array(-44.25, 10.75, -24.375, 0, 48.5, 0.625)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAASAB4AAQAAAAIAAAATAB4AAQABAAIAAAAUAB4AAQAAAAIAAAAVAB4AAQABAAIAAAAWAB4AAQAAAAIAAAAXAB4AAQABAAIAAAAYAB4AAQAAAAIAAAAZAB4AAQABAAIAAAAaAB4AAQAAAAIAAAAbAB4AAQABAAIAAAAcAB4AAQAAAAIAAAAdAB4AAQABAAIAAAAeAB4AAQAAAAIAAAAfAB4AAQABAAIAAAAgAB4AAQAAAAIAAAAhAB4AAQABAAIAAAAiAB4AAQAAAAIAAAAjAB4AAQABAAIAAAAkAB4AAQAAAAIAAAAlAB4AAQABAAIAAAAmAB4AAQAAAAIAAAAnAB4AAQABAAIAAAAoAB4AAQAAAAIAAAApAB4AAQABAAIAAAAqAB4AAQAAAAIAAAArAB4AAQABAAIAAAAsAB4AAQAAAAIAAAAtAB4AAQABAAIAAAAuAB4AAQAAAAIAAAAvAB4AAQABAAIAAAAwAB4AAQAAAAIAAAAxAB4AAQABAAIAAAAyAB4AAQAAAAIAAAAzAB4AAQABAAIAAAA0AB4AAQAAAAIAAAA1AB4AAQABAAIAAAA2AB4AAQAAAAIAAAA3AB4AAQABAAIAAAA4AB4AAQAAAAIAAAA5AB4AAQABAAIAAAA6AB4AAQAAAAIAAAA7AB4AAQABAAIAAAA8AB4AAQAAAAIAAAA9AB4AAQABAAIAAAA+AB4AAQAAAAIAAAA/AB4AAQABAAIAAABAAB4AAQAAAAIAAABBAB4AAQABAAIAAABCAB4AAQAAAAIAAABDAB4AAQABAAIAAABEAB4AAQAAAAIAAABFAB4AAQABAAIAAABGAB4AAQAAAAIAAABHAB4AAQABAAIAAABIAB4AAQAAAAIAAABJAB4AAQABAAIAAABKAB4AAQAAAAIAAABLAB4AAQABAAIAAABMAB4AAQAAAAIAAABNAB4AAQABAAIAAABOAB4AAQAAAAIAAABPAB4AAQABAAIAAABQAB4AAQAAAAIAAABRAB4AAQABAAIAAABSAB4AAQAAAAIAAABTAB4AAQABAAIAAABUAB4AAQAAAAIAAABVAB4AAQABAAIAAABWAB4AAQAAAAIAAABXAB4AAQABAAIAAABYAB4AAQAAAAIAAABZAB4AAQABAAIAAABaAB4AAQAAAAIAAABbAB4AAQABAAIAAABcAB4AAQAAAAIAAABdAB4AAQABAAIAAABeAB4AAQAAAAIAAABfAB4AAQABAAIAAABgAB4AAQAAAAIAAABhAB4AAQABAAIAAABiAB4AAQAAAAIAAABjAB4AAQABAAIAAABkAB4AAQAAAAIAAABlAB4AAQABAAIAAABmAB4AAQAAAAIAAABnAB4AAQABAAIAAABoAB4AAQAAAAIAAABpAB4AAQABAAIAAABqAB4AAQAAAAIAAABrAB4AAQABAAIAAABsAB4AAQAAAAIAAABtAB4AAQABAAIAAABuAB4AAQAAAAIAAABvAB4AAQABAAIAAABwAB4AAQAAAAIAAABxAB4AAQABAAIAAAByAB4AAQAAAAIAAABzAB4AAQABAAIAAAB0AB4AAAAAAAAAAAB0AB8AAAAAAAEAAAB1AB4AAAABAAAAAAB1AB8AAAABAAEAAAB2AB4AAAACAAAAAAB2AB8AAAACAAEAAAB3AB4AAAADAAAAAAB3AB8AAAADAAEAAAB4AB4AAAAEAAAAAAB4AB8AAAAEAAEAAAB5AB4AAAAFAAAAAAB5AB8AAAAFAAEAAAB6AB4AAAAAAAAAAAB6AB8AAAAAAAEAAAB7AB4AAAABAAAAAAB7AB8AAAABAAEAAAB8AB4AAAACAAAAAAB8AB8AAAACAAEAAAB9AB4AAAADAAAAAAB9AB8AAAADAAEAAAB+AB4AAAAEAAAAAAB+AB8AAAAEAAEAAAB/AB4AAAAFAAAAAAB/AB8AAAAFAAEAAACAAB4AAAAAAAAAAACAAB8AAAAAAAEAAACBAB4AAAABAAAAAACBAB8AAAABAAEAAACCAB4AAAACAAAAAACCAB8AAAACAAEAAACDAB4AAAADAAAAAACDAB8AAAADAAEAAACEAB4AAAAEAAAAAACEAB8AAAAEAAEAAACFAB4AAAAFAAAAAACFAB8AAAAFAAEAAAAQAB4AAQAAAAIAAAARAB4AAQABAAIAAAAOAB4AAQAAAAIAAAAPAB4AAQABAAIAAAAMAB4AAQAAAAIAAAANAB4AAQABAAIAAAAKAB4AAQAAAAIAAAALAB4AAQABAAIAAAAIAB4AAQAAAAIAAAAJAB4AAQABAAIAAAAGAB4AAQAAAAIAAAAHAB4AAQABAAIAAAAEAB4AAQAAAAIAAAAFAB4AAQABAAIAAAACAB4AAQAAAAIAAAADAB4AAQABAAIAAAAAAB4AAQAAAAIAAAABAB4AAQABAAIAAAD+/x4AAQAAAAIAAAD//x4AAQABAAIAAAD8/x4AAQAAAAIAAAD9/x4AAQABAAIAAAD6/x4AAQAAAAIAAAD7/x4AAQABAAIAAAD4/x4AAQAAAAIAAAD5/x4AAQABAAIAAAD2/x4AAQAAAAIAAAD3/x4AAQABAAIAAAA9AAYAAQAAAAMAAAA9AAcAAQAAAAQAAAA+AAYAAQABAAMAAAA+AAcAAQABAAQAAAA/AAYAAQAAAAMAAAA/AAcAAQAAAAQAAABAAAYAAQABAAMAAABAAAcAAQABAAQAAABBAAYAAQAAAAMAAABBAAcAAQAAAAQAAABCAAYAAQABAAMAAABCAAcAAQABAAQAAABDAAYAAQAAAAMAAABDAAcAAQAAAAQAAABEAAYAAQABAAMAAABEAAcAAQABAAQAAAA7AAYAAQAAAAMAAAA7AAcAAQAAAAQAAAA8AAYAAQABAAMAAAA8AAcAAQABAAQAAAA5AAYAAQAAAAMAAAA5AAcAAQAAAAQAAAA6AAYAAQABAAMAAAA6AAcAAQABAAQAAAA3AAYAAQAAAAMAAAA3AAcAAQAAAAQAAAA4AAYAAQABAAMAAAA4AAcAAQABAAQAAAA1AAYAAQAAAAMAAAA1AAcAAQAAAAQAAAA2AAYAAQABAAMAAAA2AAcAAQABAAQAAAAzAAYAAQAAAAMAAAAzAAcAAQAAAAQAAAA0AAYAAQABAAMAAAA0AAcAAQABAAQAAAAxAAYAAQAAAAMAAAAxAAcAAQAAAAQAAAAyAAYAAQABAAMAAAAyAAcAAQABAAQAAAAvAAYAAQAAAAMAAAAvAAcAAQAAAAQAAAAwAAYAAQABAAMAAAAwAAcAAQABAAQAAAAtAAYAAQAAAAMAAAAtAAcAAQAAAAQAAAAuAAYAAQABAAMAAAAuAAcAAQABAAQAAAArAAYAAQAAAAMAAAArAAcAAQAAAAQAAAAsAAYAAQABAAMAAAAsAAcAAQABAAQAAAApAAYAAQAAAAMAAAApAAcAAQAAAAQAAAAqAAYAAQABAAMAAAAqAAcAAQABAAQAAAAnAAYAAQAAAAMAAAAnAAcAAQAAAAQAAAAoAAYAAQABAAMAAAAoAAcAAQABAAQAAAAlAAYAAQAAAAMAAAAlAAcAAQAAAAQAAAAmAAYAAQABAAMAAAAmAAcAAQABAAQAAAAjAAYAAQAAAAMAAAAjAAcAAQAAAAQAAAAkAAYAAQABAAMAAAAkAAcAAQABAAQAAAAhAAYAAQAAAAMAAAAhAAcAAQAAAAQAAAAiAAYAAQABAAMAAAAiAAcAAQABAAQAAAAfAAYAAQAAAAMAAAAfAAcAAQAAAAQAAAAgAAYAAQABAAMAAAAgAAcAAQABAAQAAAAdAAYAAQAAAAMAAAAdAAcAAQAAAAQAAAAeAAYAAQABAAMAAAAeAAcAAQABAAQAAAAbAAYAAQAAAAMAAAAbAAcAAQAAAAQAAAAcAAYAAQABAAMAAAAcAAcAAQABAAQAAAAZAAYAAQAAAAMAAAAZAAcAAQAAAAQAAAAaAAYAAQABAAMAAAAaAAcAAQABAAQAAAAXAAYAAQAAAAMAAAAXAAcAAQAAAAQAAAAYAAYAAQABAAMAAAAYAAcAAQABAAQAAAAVAAYAAQAAAAMAAAAVAAcAAQAAAAQAAAAWAAYAAQABAAMAAAAWAAcAAQABAAQAAAATAAYAAQAAAAMAAAATAAcAAQAAAAQAAAAUAAYAAQABAAMAAAAUAAcAAQABAAQAAAARAAYAAQAAAAMAAAARAAcAAQAAAAQAAAASAAYAAQABAAMAAAASAAcAAQABAAQAAAAPAAYAAQAAAAMAAAAPAAcAAQAAAAQAAAAQAAYAAQABAAMAAAAQAAcAAQABAAQAAAANAAYAAQAAAAMAAAANAAcAAQAAAAQAAAAOAAYAAQABAAMAAAAOAAcAAQABAAQAAAALAAYAAQAAAAMAAAALAAcAAQAAAAQAAAAMAAYAAQABAAMAAAAMAAcAAQABAAQAAAAJAAYAAQAAAAMAAAAJAAcAAQAAAAQAAAAKAAYAAQABAAMAAAAKAAcAAQABAAQAAAAHAAYAAQAAAAMAAAAHAAcAAQAAAAQAAAAIAAYAAQABAAMAAAAIAAcAAQABAAQAAAAFAAYAAQAAAAMAAAAFAAcAAQAAAAQAAAAGAAYAAQABAAMAAAAGAAcAAQABAAQAAAADAAYAAQAAAAMAAAADAAcAAQAAAAQAAAAEAAYAAQABAAMAAAAEAAcAAQABAAQAAAABAAYAAQAAAAMAAAABAAcAAQAAAAQAAAACAAYAAQABAAMAAAACAAcAAQABAAQAAAD//wYAAQAAAAMAAAD//wcAAQAAAAQAAAAAAAYAAQABAAMAAAAAAAcAAQABAAQAAAD9/wYAAQAAAAMAAAD9/wcAAQAAAAQAAAD+/wYAAQABAAMAAAD+/wcAAQABAAQAAAD7/wYAAQAAAAMAAAD7/wcAAQAAAAQAAAD8/wYAAQABAAMAAAD8/wcAAQABAAQAAAD5/wYAAQAAAAMAAAD5/wcAAQAAAAQAAAD6/wYAAQABAAMAAAD6/wcAAQABAAQAAAD3/wYAAQAAAAMAAAD3/wcAAQAAAAQAAAD4/wYAAQABAAMAAAD4/wcAAQABAAQAAABFAAYAAAAAAAAAAABFAAcAAAAAAAEAAABGAAYAAAABAAAAAABGAAcAAAABAAEAAABHAAYAAAACAAAAAABHAAcAAAACAAEAAABIAAYAAAADAAAAAABIAAcAAAADAAEAAABJAAYAAAAEAAAAAABJAAcAAAAEAAEAAABKAAYAAAAFAAAAAABKAAcAAAAFAAEAAABLAAYAAAAAAAAAAABLAAcAAAAAAAEAAABMAAYAAAABAAAAAABMAAcAAAABAAEAAABNAAYAAAACAAAAAABNAAcAAAACAAEAAABOAAYAAAADAAAAAABOAAcAAAADAAEAAABPAAYAAAAEAAAAAABPAAcAAAAEAAEAAABQAAYAAAAFAAAAAABQAAcAAAAFAAEAAABRAAYAAAAAAAAAAABRAAcAAAAAAAEAAABSAAYAAAABAAAAAABSAAcAAAABAAEAAABTAAYAAAACAAAAAABTAAcAAAACAAEAAABUAAYAAAADAAAAAABUAAcAAAADAAEAAABVAAYAAAAEAAAAAABVAAcAAAAEAAEAAABWAAYAAAAFAAAAAABWAAcAAAAFAAEAAABXAAYAAAAAAAAAAABXAAcAAAAAAAEAAABYAAYAAAABAAAAAABYAAcAAAABAAEAAABZAAYAAAACAAAAAABZAAcAAAACAAEAAABaAAYAAAADAAAAAABaAAcAAAADAAEAAABbAAYAAAAEAAAAAABbAAcAAAAEAAEAAABcAAYAAAAFAAAAAABcAAcAAAAFAAEAAAA=")
tile_set = SubResource("TileSet_phvbg")

[node name="Edge" type="StaticBody2D" parent="."]
scale = Vector2(2, 2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Edge"]
position = Vector2(684.5, 28.75)
rotation = -1.5708
scale = Vector2(2, 2)
shape = SubResource("WorldBoundaryShape2D_vo17d")

[node name="Boat Seller" type="Node2D" parent="."]
position = Vector2(1200, 40.5)
script = ExtResource("7_7n2o6")
profession = "Boat Seller"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Boat Seller"]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_6h7vh")
autoplay = "default"
frame_progress = 0.80562

[node name="InteractionArea" type="Area2D" parent="Boat Seller/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boat Seller/AnimatedSprite2D/InteractionArea"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_rccsu")

[node name="DialogBlock" type="Node2D" parent="Boat Seller"]

[node name="InstructionObject" parent="Boat Seller/DialogBlock" instance=ExtResource("9_qrwm6")]
position = Vector2(-0.5, -26.5)

[node name="Dialog" type="Node2D" parent="Boat Seller/DialogBlock"]
position = Vector2(-63.5, -84.5)

[node name="Sprite2D" type="Sprite2D" parent="Boat Seller/DialogBlock/Dialog"]
position = Vector2(64, 32)
texture = SubResource("GradientTexture2D_edf0l")

[node name="DialogText" type="Label" parent="Boat Seller/DialogBlock/Dialog/Sprite2D"]
offset_left = -63.0
offset_top = -27.0
offset_right = 63.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("10_0vypl")
theme_override_font_sizes/font_size = 8
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="DialogButtons1" type="Control" parent="Boat Seller/DialogBlock"]
layout_mode = 3
anchors_preset = 0
offset_left = -63.5
offset_top = -84.5
offset_right = -23.5
offset_bottom = -44.5
metadata/_edit_use_anchors_ = true

[node name="Yes" type="Button" parent="Boat Seller/DialogBlock/DialogButtons1"]
layout_mode = 0
offset_left = 14.0
offset_top = 43.0
offset_right = 43.0
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("10_0vypl")
theme_override_font_sizes/font_size = 8
text = "Yes"
metadata/_edit_use_anchors_ = true

[node name="No" type="Button" parent="Boat Seller/DialogBlock/DialogButtons1"]
layout_mode = 0
offset_left = 76.5
offset_top = 43.0
offset_right = 105.5
offset_bottom = 59.0
theme_override_fonts/font = ExtResource("10_0vypl")
theme_override_font_sizes/font_size = 8
text = "No"
metadata/_edit_use_anchors_ = true

[node name="DialogButtons2" type="Control" parent="Boat Seller/DialogBlock"]
layout_mode = 3
anchors_preset = 0
offset_left = -63.5
offset_top = -84.5
offset_right = -23.5
offset_bottom = -44.5
metadata/_edit_use_anchors_ = true

[node name="Ok" type="Button" parent="Boat Seller/DialogBlock/DialogButtons2"]
layout_mode = 0
offset_left = 46.0
offset_top = 42.5
offset_right = 75.0
offset_bottom = 58.5
theme_override_fonts/font = ExtResource("10_0vypl")
theme_override_font_sizes/font_size = 8
text = "Ok"

[node name="DialogSelectMenu" parent="Boat Seller/DialogBlock" instance=ExtResource("11_fm13a")]
position = Vector2(-25, -108.5)
scale = Vector2(0.5, 0.5)

[node name="Player" parent="." instance=ExtResource("12_tmir4")]
position = Vector2(126.5, 14.5)
scale = Vector2(2, 2)
collision_layer = 3

[node name="HealthCanvas" parent="Player" instance=ExtResource("13_bb8k7")]

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -35)
zoom = Vector2(3, 3)
process_callback = 0
limit_smoothed = true
position_smoothing_enabled = true

[node name="Boat" parent="." instance=ExtResource("14_trb2f")]
position = Vector2(1232, 91)

[connection signal="talkingWithBoatGuy" from="." to="Boat Seller" method="_on_game_talking_with_boat_guy"]
[connection signal="body_entered" from="Boat Seller/AnimatedSprite2D/InteractionArea" to="Boat Seller" method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="Boat Seller/AnimatedSprite2D/InteractionArea" to="Boat Seller" method="_on_interaction_area_body_exited"]
[connection signal="pressed" from="Boat Seller/DialogBlock/DialogButtons1/Yes" to="Boat Seller" method="_on_yes_pressed"]
[connection signal="pressed" from="Boat Seller/DialogBlock/DialogButtons1/No" to="Boat Seller" method="_on_no_pressed"]
[connection signal="pressed" from="Boat Seller/DialogBlock/DialogButtons2/Ok" to="Boat Seller" method="_on_ok_pressed"]
[connection signal="actionSelected" from="Boat Seller/DialogBlock/DialogSelectMenu" to="Boat Seller" method="_on_dialog_select_menu_action_selected"]
[connection signal="interactwithNPC" from="Player" to="." method="_on_player_interactwith_npc"]
